--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
-    "core-js": "^3.23.3"
+    "core-js": "^3.23.3",
+    "webpack": "^5.73.0"
   }
 }
