--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "webpack-dev-server": "^4.9.2",
+    "webpack": "^5.73.0"
   },
   "dependencies": {
-    "core-js": "^3.23.3",
-    "webpack": "^5.73.0"
+    "core-js": "^3.23.3"
   }
 }
